--- a/params.config
+++ b/params.config
@@ -20,5 +20,15 @@ params {
 	trimMinLength_1_2 = 55
 	clearInput_1_2 = false
 
+	/*
+	Component 'spades_1_3'
+	---------------------
+	*/
+	spadesMinCoverage_1_3 = 2
+	spadesMinKmerCoverage_1_3 = 2
+	spadesKmers_1_3 = 'auto'
+	clearInput_1_3 = false
+	disableRR_1_3 = false
+
 
 }
