--- a/resources.config
+++ b/resources.config
@@ -4,5 +4,8 @@ process {
 	$fastqc_1_2.memory = '4GB'
 	$trimmomatic_1_2.cpus = 2
 	$trimmomatic_1_2.memory = { 4.GB * task.attempt }
+	$spades_1_3.cpus = 4
+	$spades_1_3.memory = { 5.GB * task.attempt }
+	$spades_1_3.scratch = true
 
 }
